Siguiendo con le proceso

--- a/index.html
+++ b/index.html
@@ -199,7 +199,46 @@
                     </form>
                 </div>
     </section>
-    
+
+    <!-- Footer -->
+    <footer class="text-center bg-primary text-white">
+            <div class="container">
+                <div class="row rowfooter">
+                    <div class="col-md-4">
+                        <h3>LOCATION</h3>
+                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>ARAUND THE WEB</h3>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="#" class="btn-social"><i class="fa fa-fw fa-facebook"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social"><i class="fa fa-fw fa-google-plus"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
+                            </li>
+                            <li>
+                                <a href="#" class="btn-social"><i class="fa fa-fw fa-dribbble"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4">
+                        <h3>ABOUT FREELANCER</h3>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                    </div>
+                </div>
+            </div>
+        
+        <div class="footer-below bg-footer">
+            <p>Copyright &copy; Your Website 2014</p> 
+        </div>
+    </footer>    
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/freelancer.js"></script>
