--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
     </section>
     <section>
-        <div class="container">
+        <div class="container" id="contact">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>CONTACT ME</h2>
