--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body>
+<body id="page-top">
     <!-- Inserta tu código aqui -->
     <header>
         <div class="navbar navbar-fixed-top bg-primary">
