--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
 
             
-            <div class="collapse navbar-collapse">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="hidden"><a href="#page-top"></a></li>
                     <li class="page-scroll"><a href="#portfolio">PORTFOLIO</a></li>
