a:hover buttons footer

--- a/index.html
+++ b/index.html
@@ -170,25 +170,26 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <form>
+
+                    <form id="contactForm">
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <input type="text" class="form-control" placeholder="Name">
+                                <input type="text" class="form-control" placeholder="Name" required data-validation-required-message>
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <input type="text" class="form-control" placeholder="Email Address">
+                                <input type="text" class="form-control" placeholder="Email Address" required data-validation-required-message>
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <input type="text" class="form-control" placeholder="Phone Number">
+                                <input type="text" class="form-control" placeholder="Phone Number" required data-validation-required-message>
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-xs-12">
-                                <input type="text" class="form-control" placeholder="Message">
+                                <input type="text" class="form-control" placeholder="Message"  id="message" required data-validation-required-message>
                             </div>
                         </div>
                         <div class="row">
